Upgrading App to 4.3

--- a/web/buildProject.css
+++ b/web/buildProject.css
@@ -1,3 +1,16 @@
+html, body { 
+	height: 100%; 
+	width: 100%; 
+	margin: 0; 
+	padding: 0;
+	overflow: hidden; 
+}
+      
+
+#map{
+	padding:0;
+}
+
 .toolbar {
 	background:white;
 	border-style:solid;
