--- a/web/js/buildProject/templates/InfoGrid.html
+++ b/web/js/buildProject/templates/InfoGrid.html
@@ -1,3 +1,3 @@
 <div>
-	<div dojoAttachPoint="gridDomNode" style="height:110px;"></div>
+	<div data-dojo-attach-point="gridDomNode" style="height:110px;"></div>
 </div>
