Initial webpack commit

--- a/web/buildProject.css
+++ b/web/buildProject.css
@@ -67,7 +67,7 @@ html, body {
 	border-bottom-style: solid;
 	border-bottom-color: black;
 	border-bottom-width: 1px;
-	padding-left: 10px;z
+	padding-left: 10px;
 }
 
 .flat .dijitTextBox {
